--- a/style.css
+++ b/style.css
@@ -1,23 +1,70 @@
+#calculator {
+    width: 40%;
+    height: 400px;
+    margin: 50px auto;
+    border: 1px solid orangered;
+    padding: 20px 10px;
+    background-color: grey;
+}
+
 .display {
-    border: 1px solid gray;
-    text-align: center;
-    height: 40px;
-    width: 200px;
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    font-size: 25px;
+    height: 20%;
+    width: 70%;
+    margin: 20px auto;
+    background-color: white;
+
+}
+
+.divOperators {
+    display: flex;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+    gap: 3px;
+}
+
+button {
+    font-size: 18px;
+    width: 20%;
+    background-color: orange;
+    border-radius: 20px;
 }
 
 .numbers {
     display: flex;
+    width: 70%;
+    height: 60%;
     justify-content: center;
     flex-wrap: wrap;
-    width: 70px;
     margin: 0 auto;
 }
 
+
 .number {
-    order: 3;
-    border: 1px solid salmon;
-    width: 20px;
-    height: 20px;
+    /* order: 3; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: white;
+    width: 30%;
+    font-size: 30px;
+    text-align: center;
+}
+
+.zero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: white;
+    width: 92%;
+    font-size: 30px;
     text-align: center;
 }
