--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
     width: 40%;
     height: 400px;
     margin: 50px auto;
-    border: 1px solid orangered;
+    border: 1px solid green;
     padding: 20px 10px;
     background-color: grey;
+    border-radius: 30px;
 }
 
 .display {
@@ -20,51 +21,43 @@
 
 }
 
-.divOperators {
-    display: flex;
-    width: 70%;
-    justify-content: center;
-    align-items: center;
-    margin: 10px auto;
-    gap: 3px;
-}
-
-button {
-    font-size: 18px;
-    width: 20%;
-    background-color: orange;
-    border-radius: 20px;
-}
-
-.numbers {
-    display: flex;
+.container {
     width: 70%;
     height: 60%;
-    justify-content: center;
-    flex-wrap: wrap;
     margin: 0 auto;
+    display: grid;
+    /* grid-template-areas: 'clear plusMinus undo divide'
+                         'seven eight nine multiply'
+                         'four five six subtract'
+                         'one two three add'
+                         'zero decimal three add'; */
+    grid-template: repeat(5, 1fr) / repeat(4, 1fr);
+    gap: 5px 3px;
+    padding: 10px;
 }
 
-
-.number {
-    /* order: 3; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    background-color: white;
-    width: 30%;
-    font-size: 30px;
-    text-align: center;
+.equals {
+    grid-area: 5 / 4;
 }
 
-.zero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    background-color: white;
-    width: 92%;
-    font-size: 30px;
-    text-align: center;
+.multiply {
+    grid-area: 2 / 4;
+
 }
+
+.subtract {
+    grid-area: 3 / 4;
+}
+
+.add {
+    grid-area: 4 / 4;
+}
+
+.number0 {
+    grid-area: 5 / span 2;
+}
+
+.opr {
+    background-color: pink;
+}
+
