--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #calculator {
-    width: 40%;
+    width: 300px;
     height: 400px;
-    margin: 50px auto;
+    margin: 200px auto;
     border: 1px solid green;
     padding: 20px 10px;
     background-color: grey;
