--- a/style.css
+++ b/style.css
@@ -2,28 +2,32 @@
     width: 300px;
     height: 400px;
     margin: 200px auto;
-    border: 1px solid green;
+    border: 2px solid black;
     padding: 20px 10px;
     background-color: grey;
     border-radius: 30px;
+    font-family: Helvetica;
 }
 
 .display {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
+    overflow: scroll;
     border: 1px solid black;
-    font-size: 25px;
+    font-size: max(2vw, 42px);
     height: 20%;
-    width: 70%;
-    margin: 20px auto;
+    width: 80%;
+    margin: 20px auto 0px;
     background-color: white;
+    border-radius: 20px;
+    padding-right: 20px;
 
 }
 
 .container {
-    width: 70%;
-    height: 60%;
+    width: 85%;
+    height: 65%;
     margin: 0 auto;
     display: grid;
     /* grid-template-areas: 'clear plusMinus undo divide'
@@ -34,6 +38,7 @@
     grid-template: repeat(5, 1fr) / repeat(4, 1fr);
     gap: 5px 3px;
     padding: 10px;
+    
 }
 
 .equals {
@@ -53,11 +58,45 @@
     grid-area: 4 / 4;
 }
 
-.number0 {
+.i0 {
     grid-area: 5 / span 2;
+}
+
+.i9 {
+    grid-area: 2 / 3;
+}
+
+.i7 {
+    grid-area: 2 / 1;
+}
+
+
+.i6 {
+    grid-area: 3 / 3;
+}
+
+.i4 {
+    grid-area: 3 / 1;
+}
+
+.i3 {
+    grid-area: 4 / 3;
+}
+
+.i1 {
+    grid-area: 4 / 1;
 }
 
 .opr {
     background-color: pink;
+}
+
+.number, .opr {
+    border-radius: 5px;
+    font-size: 24px;
+}
+
+.undo {
+    font-size: 16px;
 }
 
