--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     margin: 200px auto;
     border: 2px solid black;
     padding: 20px 10px;
-    background-color: #A60303;
+    background-color: #710303;
     border-radius: 30px;
     font-family: Helvetica;
 }
@@ -63,32 +63,32 @@ body {
     grid-area: 4 / 4;
 }
 
-.i0 {
+.Digit0 {
     grid-area: 5 / span 2;
 }
 
-.i9 {
+.Digit9 {
     grid-area: 2 / 3;
 }
 
-.i7 {
+.Digit7 {
     grid-area: 2 / 1;
 }
 
 
-.i6 {
+.Digit6 {
     grid-area: 3 / 3;
 }
 
-.i4 {
+.Digit4 {
     grid-area: 3 / 1;
 }
 
-.i3 {
+.Digit3 {
     grid-area: 4 / 3;
 }
 
-.i1 {
+.Digit1 {
     grid-area: 4 / 1;
 }
 
