--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
+/* Fonts */
+
+@font-face {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/robotomono/v22/L0xTDF4xlVMF-BfR8bXMIhJHg45mwgGEFl0_3vvtSM1J-gEPT5Ese09hHSh0me8iUI0.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
 body {
-    /* background-color: ; */
+    background: #ee9ca7;
+    background: linear-gradient(to right, #ffdde1, #ee9ca7);
 }
 
 #calculator {
@@ -8,23 +21,24 @@ body {
     margin: 200px auto;
     border: 2px solid black;
     padding: 20px 10px;
-    background-color: #710303;
+    background: #FFEFBA;
+    background: linear-gradient(to bottom, #FFFFFF, #FFEFBA);
     border-radius: 30px;
-    font-family: Helvetica;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 300;
 }
 
 .display {
     display: flex;
     align-items: center;
     justify-content: end;
-    overflow: scroll;
     border: 1px solid black;
     font-size: max(2vw, 42px);
     height: 20%;
     width: 80%;
-    margin: 20px auto 0px;
-    background-color: white;
-    /* color: white; */
+    margin: 10px auto 0px;
+    background-color: #ACD99D;
     border-radius: 20px;
     padding-right: 20px;
 
@@ -32,14 +46,9 @@ body {
 
 .container {
     width: 85%;
-    height: 65%;
+    height: 73%;
     margin: 0 auto;
     display: grid;
-    /* grid-template-areas: 'clear plusMinus undo divide'
-                         'seven eight nine multiply'
-                         'four five six subtract'
-                         'one two three add'
-                         'zero decimal three add'; */
     grid-template: repeat(5, 1fr) / repeat(4, 1fr);
     gap: 1px 1px;
     padding: 10px;
@@ -93,16 +102,28 @@ body {
 }
 
 .opr {
-    background-color: #F2E0D0;
+    background-color: #8296fb;
+}
+
+.selected {
+    background-color: yellow;
 }
 
 .number, .opr {
     border-radius: 5px;
     font-size: 24px;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 300;
+    cursor: pointer;
 }
 
 .number {
-    background-color: #F2B705;
+    background-color: #fd6281;
+}
+
+.number:active {
+    background-color: #fc8fa5;
 }
 
 .undo {
